# b2bit-mini-twitter

./: LICENSE  README.md  diagram.drawio  docker-compose.yml  example.env  manage.py  pyproject.toml
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_is_staff.py  0003_user_is_superuser.py  0004_remove_user_is_staff_remove_user_is_superuser.py
b2bit_mini_twitter/: asgi.py  settings.py  urls.py  wsgi.py
post/: serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py
src/authentication/: models.py  serializers.py  urls.py
src/b2bit_mini_twitter/: asgi.py  settings.py  wsgi.py
src/post/: models.py  views.py
tests/: helpers.py  test_b2bit_mini_twitter.py
tests/authetication/: test_login.py  test_register.py
tests/post/: test_create.py
